jasper/force-app/main/default/objects/WhatsappIntegration__c/WhatsappIntegration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Whatsapp Integration</label>
</CustomObject>