jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>