jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/API_Endpoint_Updated__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint_Updated__c</fullName>
    <label>API Endpoint Updated</label>
    <type>Url</type>
</CustomField>