jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/Cookie_For_Service_Msg__c.field-meta.xml
<CustomField>
    <fullName>Cookie_For_Service_Msg__c</fullName>
    <label>Cookie For Service Msg</label>
    <type>TextArea</type>
</CustomField>