jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/fullpayment_done__c.field-meta.xml
<CustomField>
    <fullName>fullpayment_done__c</fullName>
    <label>fullpayment_done</label>
    <type>Url</type>
</CustomField>