jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/lead_unresponsive_test_ride_done_booking__c.field-meta.xml
<CustomField>
    <fullName>lead_unresponsive_test_ride_done_booking__c</fullName>
    <label>lead_unresponsive_test_ride_done_booking</label>
    <type>Url</type>
</CustomField>