jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/new_lead_book_a_test_ride_03__c.field-meta.xml
<CustomField>
    <fullName>new_lead_book_a_test_ride_03__c</fullName>
    <label>new_lead_book_a_test_ride_03</label>
    <type>Url</type>
</CustomField>