jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/no_action_book_test_ride_03__c.field-meta.xml
<CustomField>
    <fullName>no_action_book_test_ride_03__c</fullName>
    <label>no_action_book_test_ride_03</label>
    <type>Url</type>
</CustomField>