jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/on_day_of_test_ride2__c.field-meta.xml
<CustomField>
    <fullName>on_day_of_test_ride2__c</fullName>
    <label>on_day_of_test_ride2</label>
    <type>Url</type>
</CustomField>