jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/order_cancelled__c.field-meta.xml
<CustomField>
    <fullName>order_cancelled__c</fullName>
    <label>order_cancelled</label>
    <type>Url</type>
</CustomField>