jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/rnr_whatsapp_book_test_ride__c.field-meta.xml
<CustomField>
    <fullName>rnr_whatsapp_book_test_ride__c</fullName>
    <label>rnr_whatsapp_book_test_ride</label>
    <type>Url</type>
</CustomField>