jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/Service_Bearer_Token__c.field-meta.xml
<CustomField>
    <fullName>Service_Bearer_Token__c</fullName>
    <label>Service Bearer Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>