jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/test_ride_booked_text_2_image__c.field-meta.xml
<CustomField>
    <fullName>test_ride_booked_text_2_image__c</fullName>
    <label>test ride booked text 2 image</label>
    <type>Url</type>
</CustomField>