jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/test_ride_done__c.field-meta.xml
<CustomField>
    <fullName>test_ride_done__c</fullName>
    <label>test_ride_done</label>
    <type>Url</type>
</CustomField>