jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/test_ride_not_taken2__c.field-meta.xml
<CustomField>
    <fullName>test_ride_not_taken2__c</fullName>
    <label>test_ride_not_taken2</label>
    <type>Url</type>
</CustomField>