jasper/force-app/main/default/objects/WhatsappIntegration__c/fields/test_ride_taken_indie_not_booked_followu__c.field-meta.xml
<CustomField>
    <fullName>test_ride_taken_indie_not_booked_followu__c</fullName>
    <label>test_ride_taken_indie_not_booked_followu</label>
    <type>Url</type>
</CustomField>